--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /.vs/MPCProject/FileContentIndex/f9172140-799b-409f-b997-7cf2f3139c7b.vsidx
 /.gitignore
 /.vs/MPCProject/FileContentIndex
+/.vs/slnx.sqlite
